* More scary link caching modes
* Old manually maintained log pages replaced with searchable Special:Log
* Skins system more modular: templates and CSS are now in /skins/
* New user preference for limitting the image size for images on image description
  pages 
* Error pages no more offer edit / talk / watch links (bug #502)
* Allow user to preview article on first edit (bug #530)
* New dark background skin named Amethyst (thanks Sorwena and Sorkhiri)
* [[RFC 1234]] will now make an internal link (bug #479)
* PhpTal skins shown bogus 'What links here' etc on special pages (bug #511)
* Experimental code to manage user and group rights (Special:Userlevels)
* UI language switching
* Adding filter and username exact search match for Special:Listusers (bug #770)
* Special:Listadmins outdated, use Special:Listusers instead (bug #857)
* Traditional/Simplified Chinese conversion
* ... and more!

=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to
set $wgMimeType = "application/xhtml+xml"; to test for remaining problem
cases, but this is not recommended on live sites. (This must be set for
MathML to display properly in Mozilla.)

The new 'MonoBook' skin is not compatible with PHP 5 due to bugs in the
underlying PHPTAL library. It will be automatically disabled when running
on PHP5; the older look and feel will be used instead.


For notes on 1.3.x and older releases, see HISTORY.


=== Online documentation ===

Documentation for both end-users and site administrators is currently being
built up on Meta-Wikipedia, and is covered under the GNU Free Documentation
License:

  http://meta.wikipedia.org/wiki/Help:Contents


=== Mailing list ===

A MediaWiki-l mailing list has been set up distinct from the Wikipedia
wikitech-l list:

  http://mail.wikipedia.org/mailman/listinfo/mediawiki-l


=== IRC help ===

There's usually someone online in #mediawiki on irc.freenode.net